# gith

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE-HUMAN  README.md  pyproject.toml
.github/workflows/: ci.yml  dependency_check.yml
docs/: intro.md
docs/src/: SUMMARY.md  best-practices.md  book.toml  commands.md  examples.md  installation.md  integration.md  intro.md  licensing.md  quick-start.md  troubleshooting.md
src/: cli.rs  error.rs  git.rs  lib.rs  license.rs  main.rs  manifest.rs
tests/: integration_tests.rs
