[package]
name = "gith"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A friendly Git wrapper for marking human-generated content"
license = "MIT"
repository = "https://github.com/amrit110/gith"
keywords = ["git", "cli", "human-generated", "ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gith"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.20"
dirs = "6.0"

[dev-dependencies]
tempfile = "3.20"
assert_cmd = "2.0"
predicates = "3.1"
